sort up pom